<resources>
    <string name="app_name">Sistemas de Filas</string>
    <string name="mensagem_login">Faça seu Login</string>
    <string name="mensagem_login_activity">Bem vindo ao App!</string>
    <string name="action_buscar">Procurar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_config">Configurações</string>
    <string name="action_share">Compartilhar</string>
</resources>
