<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/action_buscar"
        android:icon="@drawable/ic_buscar_white"
        android:id="@+id/action_buscar"
        app:showAsAction="always"/>
    <item android:title="@string/action_share"
        android:icon="@drawable/ic_share_white"
        android:id="@+id/action_share"
        app:showAsAction="always" />
    <item android:title="@string/action_atualizar"
        android:icon="@drawable/ic_atualizar_white"
        android:id="@+id/action_atualizar"
        app:showAsAction="always" />
    <item android:title="@string/action_adicionar"
        android:icon="@drawable/ic_adicionar_white"
        android:id="@+id/action_adicionar"
        app:showAsAction="ifRoom" />
    <item android:title="@string/action_config"
        android:id="@+id/action_config"
        app:showAsAction="never" />
</menu>